--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 */**/CsBindGen/*.dll
 */**/CsBindGen/*.so
-
+*/**/CsBindGen/runtimes
 # Created by https://www.toptal.com/developers/gitignore/api/csharp,rust,jetbrains+all,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp,rust,jetbrains+all,visualstudio,visualstudiocode
 
