trying to bond native lib with application via xtask. the lib is suppose to atomatically update within the app

--- a/mandelbrot/mandelbrot.csproj
+++ b/mandelbrot/mandelbrot.csproj
@@ -28,6 +28,7 @@
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
+    <FractalNativeVersion Condition="'$(FractalNativeVersion)'==''">1</FractalNativeVersion>
 		<!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
 		<WindowsPackageType>None</WindowsPackageType>
 
@@ -61,6 +62,11 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
+    <PackageReference Include="RustFractals" Version="1.0.*" VersionOverride="$(FractalNativeVersion)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="CsBindGen\ImportHelper.cs" />
 	</ItemGroup>
 
 </Project>
