--- a/.cargo/Config.toml
+++ b/.cargo/Config.toml
@@ -2,8 +2,8 @@
 xtask = "run --manifest-path xtask/Cargo.toml --"
 monitor = "xtask monitor-rust-source"
 build-native = "xtask build-native"
-build-windows-debug = "build-native --targets windows-x64 android-arm64 --reload-dotnet"
-build-windows-release = "build-native --targets windows-x64 android-arm64 --reload-dotnet --release"
+build-windows-debug = "build-native --targets windows-x64  --reload-dotnet --clean-nuget-dir"
+build-windows-release = "build-native --targets windows-x64  --reload-dotnet --clean-nuget-dir --release"
 
 
 [target.aarch64-linux-android]
